--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="card-body">
                     <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-                        <a href="upload-form.html" class="btn btn-primary btn-lg" data-page="upload">
+                        <a href="case-creator.html" class="btn btn-primary btn-lg" data-page="upload">
                             <i class="fas fa-upload mr-3"></i>
                             <div class="text-left">
                                 <div class="font-medium">Upload Files</div>
