--- a/templates/table-processor.html
+++ b/templates/table-processor.html
@@ -30,7 +30,7 @@
                     <i class="fas fa-home mr-2"></i>
                     Home
                 </a>
-                <a href="upload-form.html" class="btn btn-primary" data-page="upload">
+                <a href="case-creator.html" class="btn btn-primary" data-page="upload">
                     <i class="fas fa-upload mr-2"></i>
                     Upload Files
                 </a>
